FIX: favicon alignment in shortcut and summary && ver inc

--- a/TabExplorer/newtab.css
+++ b/TabExplorer/newtab.css
@@ -153,6 +153,14 @@ summary {
   padding: 0.5em;
 }
 
+summary .favicon{
+  image-rendering: pixelated;
+  margin-right: 0.5em;
+  width: 16px;
+  height: 16px;
+  margin-top: auto;
+}
+
 #tabs {
   display: flex;
   flex-direction: column;
@@ -372,6 +380,7 @@ summary {
   margin-right: 0.5em;
   width: 16px;
   height: 16px;
+  margin-top: auto;
 }
 
 #shortcutInputs {
